更新 - 商品页内容区域完成，购物车构建中

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <!-- 移动端视口不能被缩放 -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-  <title>delicious-candy</title>
-  <link rel="stylesheet" href="static/reset/reset.css">
+  <title>eleme-candy</title>
 </head>
 
 <body>
